assets directory to right place

--- a/src/SamiverbBundle/Resources/views/base.html.twig
+++ b/src/SamiverbBundle/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Samiverb - {% block title %}{% endblock %}</title>
 
-  <link id="linkApiRoot" href="/app_dev.php"/>
+  <link id="linkApiRoot" href=""/>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="{{ asset('bundles/samiverb/css/bootstrap.css') }}" />
