bootstrap asset fix

--- a/src/SamiverbBundle/Resources/views/base.html.twig
+++ b/src/SamiverbBundle/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
   <link id="linkApiRoot" href=""/>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="{{ asset('bundles/samiverb/css/bootstrap.css') }}" />
+  <link rel="stylesheet" href="{{ asset('bundles/samiverb/css/bootstrap.min.css') }}" />
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
 
   <script src="//use.edgefonts.net/pt-sans:n4,i4,n7,i7:all;lancelot.js"></script>
