--- a/src/SamiverbBundle/Resources/views/base.html.twig
+++ b/src/SamiverbBundle/Resources/views/base.html.twig
@@ -8,6 +8,8 @@
 
   <link id="linkApiRoot" href="current/web"/>
 
+  <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" /> 
+  
   <!-- Bootstrap -->
   <link rel="stylesheet" href="{{ asset('bundles/samiverb/css/bootstrap.min.css') }}" />
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
