--- a/src/SamiverbBundle/Resources/views/base.html.twig
+++ b/src/SamiverbBundle/Resources/views/base.html.twig
@@ -10,9 +10,12 @@
 
   <link rel="icon" type="image/x-icon" href="{{ asset('bundles/samiverb/img/favicon.ico') }}" /> 
 
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="{{ asset('bundles/samiverb/css/bootstrap.min.css') }}" />
-  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
+  {% stylesheets 
+    'bundles/samiverb/css/thirdparty/*'
+    'bundles/samiverb/css/*' 
+    filter='cssrewrite' %}
+    <link rel="stylesheet" href="{{ asset_url }}" />
+  {% endstylesheets %}
 
   <script src="//use.edgefonts.net/pt-sans:n4,i4,n7,i7:all;lancelot.js"></script>
 
@@ -23,9 +26,17 @@
       <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  <link rel="stylesheet" href="{{ asset('bundles/samiverb/css/main.css') }}" />
-  <link rel="stylesheet" href="{{ asset('bundles/samiverb/dist/ladda-themeless.min.css') }}">
 
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61717634-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 
@@ -72,26 +83,20 @@
     <!-- content -->
   {% endblock %}
 
-  <!-- JQuery (UI) and Bootstrap libraries !-->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-  <script src="{{ asset('bundles/samiverb/js/bootstrap.min.js') }}"></script>
-  <script src="{{ asset('bundles/samiverb/dist/spin.min.js') }}"></script>
-  <script src="{{ asset('bundles/samiverb/dist/ladda.min.js') }}"></script>
+  <script src="{{ asset('bundles/samiverb/js/thirdparty/jquery.min.js') }}"></script>
+  <script src="{{ asset('bundles/samiverb/js/thirdparty/jquery-ui.min.js') }}"></script>
+  <script src="{{ asset('bundles/samiverb/js/thirdparty/angular.min.js') }}"></script>
+  <script src="{{ asset('bundles/samiverb/js/thirdparty/bootstrap.min.js') }}"></script>
+  <script src="{{ asset('bundles/samiverb/js/thirdparty/spin.min.js') }}"></script>
+  <script src="{{ asset('bundles/samiverb/js/thirdparty/ladda.min.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/main.js') }}"></script>
-
   <script src="{{ asset('bundles/samiverb/js/jquery/smoothness.js') }}"></script>
-
   <script src="{{ asset('bundles/samiverb/js/directives/main.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/services/verbtask.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/services/verbobject.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/controllers/output.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/controllers/validatemodal.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/controllers/verb.js') }}"></script>
-  
-  {% block javascript %}
-  {% endblock %}
 
 </body>
 </html>
