new angular controller

--- a/src/SamiverbBundle/Resources/views/base.html.twig
+++ b/src/SamiverbBundle/Resources/views/base.html.twig
@@ -96,6 +96,7 @@
   <script src="{{ asset('bundles/samiverb/js/services/verbobject.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/controllers/output.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/controllers/validatemodal.js') }}"></script>
+  <script src="{{ asset('bundles/samiverb/js/controllers/validaterequest.js') }}"></script>
   <script src="{{ asset('bundles/samiverb/js/controllers/verb.js') }}"></script>
 
 </body>
